# telemed

./: .env.example  .gitignore  Makefile  Makefile.jitsi  README.md
backend/: README.md  create_admin_users.py  pyproject.toml  requirements.txt  seed_consultations.py  simple_admin_create.py  simple_seed.py  sql_seed.py
backend/alembic/versions/: add_medical_professional_fields.py
backend/app/: main.py
backend/app/api/: admin.py  api_v1.py  auth.py  consultations.py  doctor.py  payments.py  pdf.py  pdf_clinica.py  templates.py  video.py
backend/app/core/: security.py
backend/app/db/: session.py
backend/app/models/: consultation.py  history.py  template.py  user.py
backend/app/schemas/: consultation.py  doctor.py  doctor_consultations.py  history.py  payment.py  template.py  user.py
backend/app/services/: email.py
backend/tests/: repro_issue.py
docs/: ARCHITECTURE_SEPARATION.md  AUTHENTICATION.md  INTEGRATION.md  JITSI_INTEGRATION.md  LEGAL_RGPD.md  MAINTENANCE.md  PROXMOX_SETUP.md  SYSTEM_OVERVIEW.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/admin/: page.tsx
frontend/admin/consultations/: page.tsx
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/login/: page.tsx
frontend/app/admin/patients/: page.tsx
frontend/app/booking/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/doctor/: page.tsx
frontend/app/doctor/consultations/[id]/: page-old.tsx
frontend/app/doctor/patients/: page.tsx
frontend/app/doctor/patients/[id]/: page-old.tsx
frontend/app/doctor/payments/: page.tsx
frontend/app/doctor/templates/: page.tsx
frontend/app/it/medical-professionals/: page.tsx
frontend/app/login-backup/: page.tsx
frontend/app/reserva/: page.tsx
frontend/app/video-room/: page.tsx
frontend/doctor/agenda/: page.tsx
frontend/doctor/consultations/[id]/: page.tsx
frontend/doctor/login/: page.tsx
frontend/doctor/new-consultation/: page.tsx
frontend/doctor/patients/[id]/: page.tsx
frontend/doctor/patients/[id]/edit/[recordId]/: page.tsx
frontend/it/login/: page.tsx
frontend/it/medical-professionals/: page.tsx
frontend/reserva/: page.tsx
infra/: docker-compose.yml
infra/nginx/conf.d/: default.conf
scripts/: unit-tests.sh
